--- a/styles/_main-hed.scss
+++ b/styles/_main-hed.scss
@@ -17,52 +17,18 @@
 }
 
 .search{
-	border-radius: 4px 0 4px 4px;
+	border-radius: 4px 4px 4px 4px;
 	border:solid rgba(140,155,186, .5);
-	border-width: 1px 0 1px 1px;
+	border-width: 1px 1px 1px 1px;
 	margin-top: 48px;
 	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.16);
 	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.16);
 	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.16);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 
-
-	&__field{
-		border:1px solid rgba(140,155,186, .5);
-		padding: 11.5px 0 11.5px 69px;
-		font-family: 'Nunito Sans';
-    	font-weight: normal;
-    	font-style: normal;
-    	font-size: 18px;
-    	color:$border;
-    	border: solid rgba(140,155,186, .5);
-    	border-width: 0 .5px 0 .5px;
-    	border-radius: 0;
-	}
-
-	.from{
-		background:#fff url(../img/plane-up.svg) 8% 50% no-repeat;
-		position: relative;
-		width: 324px;
-	}
-	.to{
-		background:#fff url(../img/plane-down.svg) 8% 50% no-repeat;
-		width: 324px;
-	}
-	.date{
-		background:#fff url(../img/calendar.svg) 8% 50% no-repeat;
-		width: 252px;
-	}
-	.person{
-		background:#fff url(../img/person.svg) 8% 50% no-repeat;
-		width: 200px;
-	}
-
-	&__btn{
-		background-color: $violet;
-		padding: 11.5px 13px;
-		font-size: 18px;
-		color: $gray;
-	}
+	
 }
 
 
@@ -130,4 +96,10 @@
 }
 .active{
 	display: block;
+}
+.active-item{
+	background-color: $torqu;
+}
+.hidden{
+	display: none;
 }
